# ZSQtLib

./: .gitignore  README.md  Readme.md
Doc/: Namespaces.txt  (+40 more)
Make/: Binding4PythonExamplesRemCmdClientApp.py  Binding4PythonExamplesRemCmdClientMain.py  Binding4PythonExamplesRemCmdClientMainWindow.py  Binding4PythonExamplesRemCmdClientWidgetCentral.py  Binding4Python_LICENSE.txt  Binding4Python_MANIFEST.in  Binding4Python___init__.py  Binding4Python__version.py  Binding4Python_setup.cfg  Binding4Python_setup.py  CMakeLists.txt  CopyOutput.bat  CreateBinding4Python.bat  CreateBinding4PythonReadMe.txt  Readme_BuildQt.txt  Readme_InstallVS.md  Readme_SetupLinux.md  RemoveFiles.py  RemoveIfDefBlocks.py  RemoveIfDefBlocksFromFile.py  ShowEnvVars.bat  VCProjectSettings.docx  ZSQtLib-config-version.cmake.in  ZSQtLib.mk  ZSQtLib.pro  ZSQtLib_CFlags_Linux.mk  ZSQtLib_CFlags_Win32.mk  ZSQtLib_EnvVars.mk  ZSQtLib_InputFiles.mk  ZSQtLib_LFlags_Linux.mk  ZSQtLib_LFlags_Win32.mk  ZSQtLib_SbkFlags_Linux.mk  ZSQtLib_SbkFlags_Win32.mk  ZSQtLib_ShellCmds.mk  ZSQtLib_TalkativeMakefileInfo.mk  ZSQtLib_TmpDirs.mk  ZSQtLib_TmpDirs_Binding4Python.mk  ZSQtLib_sub.mk  ZSQtLib_sub_Binding4Python.mk  ZSQtLibs.sln  (+17 more)
Make/Libs/ZSData/: ZSData.pro  ZSData.vcxproj  ZSData_VS2008.vcproj  ZSData_VS2012.vcxproj  ZSData_VS2012.vcxproj.filters  ZSData_VS2013.vcproj  ZSData_VS2013.vcxproj  ZSData_VS2013.vcxproj.filters  ZSData_VS2015.vcxproj  ZSData_VS2015.vcxproj.filters  ZSData_VS2017.vcxproj.filters
Make/Libs/ZSDataGUI/: ZSDataGUI.pro  ZSDataGUI.vcxproj  ZSDataGUI.vcxproj.filters  ZSDataGUI_VS2008.vcproj  ZSDataGUI_VS2012.vcxproj  ZSDataGUI_VS2012.vcxproj.filters  ZSDataGUI_VS2013.vcproj  ZSDataGUI_VS2013.vcxproj  ZSDataGUI_VS2013.vcxproj.filters  ZSDataGUI_VS2015.vcxproj  ZSDataGUI_VS2015.vcxproj.filters
Make/Libs/ZSDiagram/: CMakeLists.txt  ZSDiagram.pro  ZSDiagram.rc  ZSDiagram.vcxproj  ZSDiagram.vcxproj.filters  ZSDiagram_VS2002.vcproj  ZSDiagram_VS2005.vcproj  ZSDiagram_VS2008.vcproj  ZSDiagram_VS2012.vcxproj  ZSDiagram_VS2013.vcxproj  ZSDiagram_VS2013.vcxproj.filters  ZSDiagram_VS2015.vcxproj  ZSDiagram_VS2015.vcxproj.filters  ZSDiagram_VS2017.vcxproj  ZSDiagram_VS2017.vcxproj.filters  build.cmd  resource.h
Make/Libs/ZSDiagramGUI/: CMakeLists.txt
Make/Libs/ZSDraw/: CMakeLists.txt  ZSDraw.pro  ZSDraw.rc  ZSDraw.vcxproj  ZSDraw.vcxproj.filters  ZSDraw_VS2012.vcxproj  ZSDraw_VS2012.vcxproj.filters  ZSDraw_VS2013.vcproj  ZSDraw_VS2013.vcxproj  ZSDraw_VS2013.vcxproj.filters  ZSDraw_VS2015.vcxproj  ZSDraw_VS2015.vcxproj.filters  ZSDraw_VS2017.vcxproj  ZSDraw_VS2017.vcxproj.filters  resource.h
Make/Libs/ZSIpc/: CMakeLists.txt  ZSIpc.mk  ZSIpc.pro  ZSIpc.vcxproj  ZSIpc.vcxproj.filters  ZSIpcBinding4Python.cpp  ZSIpcBinding4Python.h  ZSIpcBinding4Python.mk  ZSIpcBinding4Python.xml  ZSIpcBinding4PythonGlobalFunctionsWrapper.h  ZSIpcBinding4Python_10.0.vcxproj  ZSIpcBinding4Python_10.0.vcxproj.filters  ZSIpcBinding4Python_9.0.vcproj  ZSIpcConfig.cmake.in  ZSIpc_VS2008.vcproj  ZSIpc_VS2010.vcxproj  ZSIpc_VS2010.vcxproj.filters  ZSIpc_VS2012.vcxproj  ZSIpc_VS2012.vcxproj.filters  ZSIpc_VS2013.vcproj  ZSIpc_VS2013.vcxproj  ZSIpc_VS2013.vcxproj.filters  ZSIpc_VS2015.vcxproj  ZSIpc_VS2015.vcxproj.filters  ZSIpc_VS2017.vcxproj  ZSIpc_VS2017.vcxproj.filters
Make/Libs/ZSIpcGUI/: CMakeLists.txt  ZSIpcGUI.mk  ZSIpcGUI.pro  ZSIpcGUI.vcxproj  ZSIpcGUI.vcxproj.filters  ZSIpcGUIBinding4Python.cpp  ZSIpcGUIBinding4Python.h  ZSIpcGUIBinding4Python.mk  ZSIpcGUIBinding4Python.xml  ZSIpcGUIBinding4PythonGlobalFunctionsWrapper.h  ZSIpcGUIBinding4Python_10.0.vcxproj  ZSIpcGUIBinding4Python_10.0.vcxproj.filters  ZSIpcGUIBinding4Python_9.0.vcproj  ZSIpcGUI_VS2008.vcproj  ZSIpcGUI_VS2010.vcxproj  ZSIpcGUI_VS2010.vcxproj.filters  ZSIpcGUI_VS2012.vcxproj  ZSIpcGUI_VS2012.vcxproj.filters  ZSIpcGUI_VS2013.vcproj  ZSIpcGUI_VS2013.vcxproj  ZSIpcGUI_VS2013.vcxproj.filters  ZSIpcGUI_VS2015.vcxproj  ZSIpcGUI_VS2015.vcxproj.filters  ZSIpcGUI_VS2017.vcxproj  ZSIpcGUI_VS2017.vcxproj.filters
Make/Libs/ZSIpcLog/: CMakeLists.txt
Make/Libs/ZSIpcLogGUI/: CMakeLists.txt
Make/Libs/ZSIpcTrace/: CMakeLists.txt  ZSIpcTrace.mk  ZSIpcTrace.pro  ZSIpcTrace.vcxproj  ZSIpcTrace.vcxproj.filters  ZSIpcTraceBinding4Python.cpp  ZSIpcTraceBinding4Python.h  ZSIpcTraceBinding4Python.mk  ZSIpcTraceBinding4Python.rc  ZSIpcTraceBinding4Python.xml  ZSIpcTraceBinding4PythonGlobalFunctionsWrapper.h  ZSIpcTraceBinding4Python_10.0.vcxproj  ZSIpcTraceBinding4Python_10.0.vcxproj.filters  ZSIpcTraceBinding4Python_9.0.vcproj  ZSIpcTrace_VS2008.vcproj  ZSIpcTrace_VS2010.vcxproj  ZSIpcTrace_VS2010.vcxproj.filters  ZSIpcTrace_VS2012.vcxproj  ZSIpcTrace_VS2012.vcxproj.filters  ZSIpcTrace_VS2013.vcproj  ZSIpcTrace_VS2013.vcxproj  ZSIpcTrace_VS2013.vcxproj.filters  ZSIpcTrace_VS2015.vcxproj  ZSIpcTrace_VS2015.vcxproj.filters  ZSIpcTrace_VS2017.vcxproj  ZSIpcTrace_VS2017.vcxproj.filters
Make/Libs/ZSIpcTraceGUI/: CMakeLists.txt  ZSIpcTraceGUI.mk  ZSIpcTraceGUI.pro  ZSIpcTraceGUI.vcxproj  ZSIpcTraceGUI.vcxproj.filters  ZSIpcTraceGUIBinding4Python.cpp  ZSIpcTraceGUIBinding4Python.h  ZSIpcTraceGUIBinding4Python.mk  ZSIpcTraceGUIBinding4Python.xml  ZSIpcTraceGUIBinding4PythonGlobalFunctionsWrapper.h  ZSIpcTraceGUIBinding4Python_10.0.vcxproj  ZSIpcTraceGUIBinding4Python_10.0.vcxproj.filters  ZSIpcTraceGUIBinding4Python_9.0.vcproj  ZSIpcTraceGUI_VS2008.vcproj  ZSIpcTraceGUI_VS2010.vcxproj  ZSIpcTraceGUI_VS2010.vcxproj.filters  ZSIpcTraceGUI_VS2012.vcxproj  ZSIpcTraceGUI_VS2012.vcxproj.filters  ZSIpcTraceGUI_VS2013.vcproj  ZSIpcTraceGUI_VS2013.vcxproj  ZSIpcTraceGUI_VS2013.vcxproj.filters  ZSIpcTraceGUI_VS2015.vcxproj  ZSIpcTraceGUI_VS2015.vcxproj.filters  ZSIpcTraceGUI_VS2017.vcxproj  ZSIpcTraceGUI_VS2017.vcxproj.filters
Make/Libs/ZSIpcTracePy/: CMakeLists.txt  ZSIpcTracePy.vcxproj  ZSIpcTracePy.vcxproj.filters  ZSIpcTracePy_VS2017.vcxproj  ZSIpcTracePy_VS2017.vcxproj.filters  setup.py  zsipctrace.py
Make/Libs/ZSPhysVal/: CMakeLists.txt  ZSPhysVal.pro  ZSPhysVal.vcxproj  ZSPhysVal.vcxproj.filters  ZSPhysVal_VS2012.vcxproj  ZSPhysVal_VS2012.vcxproj.filters  ZSPhysVal_VS2013.vcproj  (+5 more)
(+2625 files in other folders)
